--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
 - docker tag "$IMAGE" "${TRAVIS_REPO_SLUG}:latest"
 - docker push "${TRAVIS_REPO_SLUG}:latest"
 after_script:
+- chmod +x .travis/push.sh
 - .travis/push.sh
 - docker images
 env:
