--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ before_script:
   - env | sort
   - docker run -it --rm --name nvchecker --mount type=bind,source=${PWD},target=/data/ -w /data snw35/nvchecker:latest nvchecker nvchecker.ini
   - docker run -it --rm --name dfupdate --mount type=bind,source=${PWD},target=/data/ -w /data snw35/dfupdate:latest
-  - if [ `git status --porcelain` ]; then
-      echo "Local changes detected, continuing...";
-      cp new_ver.txt old_ver.txt;
-    else
+  - if git diff-index --quiet HEAD --; then
       echo "Placeholder for future OS package update check.";
       echo "No local changes detected, nothing to build, exiting.";
       travis_terminate 0;
+    else
+      echo "Local changes detected, continuing...";
+      cp new_ver.txt old_ver.txt;
     fi
 
 script:
