--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ before_script:
   - env | sort
   - docker run -it --rm --name nvchecker --mount type=bind,source=${PWD},target=/data/ -w /data snw35/nvchecker:latest nvchecker nvchecker.ini
   - docker run -it --rm --name dfupdate --mount type=bind,source=${PWD},target=/data/ -w /data snw35/dfupdate:latest
-  - if git diff-index --quiet HEAD --; then
-      echo "Placeholder for future OS package update check.";
+  - if [[ $(git status --porcelain | wc -l) -eq 0 ]]; then
       echo "No local changes detected, nothing to build, exiting.";
       travis_terminate 0;
     else
