--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -2,6 +2,11 @@
 oldver = "old_ver.json"
 newver = "new_ver.json"
 
+[BASE_WHEELBUILDER]
+source = "container"
+container = "library/python"
+include_regex = "\\d+\\.\\d+\\.?\\d?-alpine\\d\\.\\d+"
+
 [BASE]
 source = "container"
 container = "library/python"
